psao-artifact/data/runs/cluster-backup-2026-09-13T11-20-02Z/peerauthentication.yaml
apiVersion: v1
items:
- apiVersion: security.istio.io/v1
  kind: PeerAuthentication
  metadata:
    name: default
    namespace: default
  spec:
    mtls:
      mode: STRICT
kind: List
